--- a/netcore/Views/AccountExecutive/Details.cshtml
+++ b/netcore/Views/AccountExecutive/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@model netcore.Models.Crm.AccountExecutive
-
+@inject netcore.Data.ApplicationDbContext _context
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_AdminlteNetcoreDetails.cshtml";
@@ -14,74 +14,74 @@
         <div class="box box-primary">
             <div class="box-body">
                 <div>
-                      <dl class="dl-horizontal">
-                          <dt>
-                              @Html.DisplayNameFor(model => model.accountExecutiveName)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.accountExecutiveName)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.description)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.description)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.phone)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.phone)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.email)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.email)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.street1)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.street1)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.street2)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.street2)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.city)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.city)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.province)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.province)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.country)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.country)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.systemUserId)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.systemUserId)
-                          </dd>
-                          <dt>
-                              @Html.DisplayNameFor(model => model.createdAt)
-                          </dt>
-                          <dd>
-                              @Html.DisplayFor(model => model.createdAt)
-                          </dd>
-                      </dl>                                   
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.accountExecutiveName)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.accountExecutiveName)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.description)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.description)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.phone)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.phone)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.email)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.email)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.street1)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.street1)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.street2)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.street2)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.city)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.city)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.province)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.province)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.country)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.country)
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.systemUserId)
+                        </dt>
+                        <dd>
+                            @_context.ApplicationUser.Where(x => x.Id.Equals(Model.systemUserId)).FirstOrDefault().Email
+                        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.createdAt)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.createdAt)
+                        </dd>
+                    </dl>
                 </div>
             </div>
             <!-- /.box-body -->
