--- a/netcore/Views/Lead/Delete.cshtml
+++ b/netcore/Views/Lead/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model netcore.Models.Crm.Lead
-@inject netcore.Data.ApplicationDbContext _context;
+@inject netcore.Data.ApplicationDbContext _context
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,6 +11,12 @@
     if (!del.isConverted)
     {
         ViewData["IsCanDeleted"] = true;
+    }
+    var customerName = "";
+    netcore.Models.Invent.Customer cust = _context.Customer.Where(x => x.customerId.Equals(Model.customerId)).FirstOrDefault();
+    if (cust != null)
+    {
+        customerName = cust.customerName;
     }
 }
 
@@ -77,7 +83,7 @@
             @Html.DisplayNameFor(model => model.customerId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.customerId)
+            @customerName
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.createdAt)
