--- a/netcore/Views/Lead/Details.cshtml
+++ b/netcore/Views/Lead/Details.cshtml
@@ -1,9 +1,16 @@
 ﻿@model netcore.Models.Crm.Lead
+@inject netcore.Data.ApplicationDbContext _context
 
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_AdminlteNetcoreDetails.cshtml";
     ViewData["EntityIcon"] = "fa fa-street-view";
+    var customerName = "";
+    netcore.Models.Invent.Customer cust = _context.Customer.Where(x => x.customerId.Equals(Model.customerId)).FirstOrDefault();
+    if (cust != null)
+    {
+        customerName = cust.customerName;
+    }
 }
 
 
@@ -73,7 +80,7 @@
                             @Html.DisplayNameFor(model => model.customerId)
                         </dt>
                         <dd>
-                            @Html.DisplayFor(model => model.customerId)
+                            @customerName
                         </dd>
                         <dt>
                             @Html.DisplayNameFor(model => model.createdAt)
@@ -123,7 +130,8 @@
                         <table id="grid" name="grid" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
-                                    <th class="col-lg-11">leadId</th>
+                                    <th class="col-lg-3">Activity</th>
+                                    <th class="col-lg-8">Description</th>
                                     <th class="col-lg-1"></th>
                                 </tr>
                             </thead>
@@ -136,7 +144,7 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-md-12">
-                            <a class="btn btn-success" style="margin-bottom:10px" onclick="ShowPopup('@Url.Action("Create","LeadLine", new { masterid = Model.leadId })')"><i class="fa fa-plus"></i> Add New LeadLine</a>
+                            <a class="btn btn-success" style="margin-bottom:10px" onclick="ShowPopup('@Url.Action("Create","LeadLine", new { masterid = Model.leadId })')"><i class="fa fa-plus"></i> Add New Activity</a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +181,8 @@
                     "datatype": 'json'
                 },
                 "columns": [
-                    { "data": "leadLineId" },
+                    { "data": "activity.activityName" },
+                    { "data": "description" },
                     {
                         "data": "leadLineId",
                         "render": function (data) {
