--- a/netcore/Views/Opportunity/Details.cshtml
+++ b/netcore/Views/Opportunity/Details.cshtml
@@ -105,7 +105,8 @@
                         <table id="grid" name="grid" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
-                                    <th class="col-lg-11">opportunityId</th>
+                                    <th class="col-lg-3">Activity</th>
+                                    <th class="col-lg-8">Description</th>
                                     <th class="col-lg-1"></th>
                                 </tr>
                             </thead>
@@ -118,7 +119,7 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-md-12">
-                            <a class="btn btn-success" style="margin-bottom:10px" onclick="ShowPopup('@Url.Action("Create","OpportunityLine", new { masterid = Model.opportunityId })')"><i class="fa fa-plus"></i> Add New OpportunityLine</a>
+                            <a class="btn btn-success" style="margin-bottom:10px" onclick="ShowPopup('@Url.Action("Create","OpportunityLine", new { masterid = Model.opportunityId })')"><i class="fa fa-plus"></i> Add New Activity</a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +156,8 @@
                     "datatype": 'json'
                 },
                 "columns": [
-                    { "data": "opportunityLineId" },
+                    { "data": "activity.activityName" },
+                    { "data": "description" },
                     {
                         "data": "opportunityLineId",
                         "render": function (data) {
