--- a/netcore/Views/Account/ForgotPassword.cshtml
+++ b/netcore/Views/Account/ForgotPassword.cshtml
@@ -8,7 +8,7 @@
    
     <div class="register-box-body">
         <div class="register-logo">
-            <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>IN</b>VENTORY</a>
+            <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>CRM+</b>INVENTORY</a>
         </div>
         <p class="login-box-msg">Forgot Password</p>
         <form asp-action="ForgotPassword" method="post">
