--- a/netcore/Views/Account/Login.cshtml
+++ b/netcore/Views/Account/Login.cshtml
@@ -15,19 +15,19 @@
     <!-- /.login-logo -->
     <div class="login-box-body">
         <div class="login-logo">
-            <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>IN</b>VENTORY</a>
+            <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>CRM+</b>INVENTORY</a>
         </div>
         <p class="login-box-msg">Sign in to start your session</p>
         <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
             <div class="form-group has-feedback">
                 <label asp-for="Email"></label>
-                <input asp-for="Email" type="email" class="form-control" placeholder="Email" />
+                <input asp-for="Email" type="email" value="super@admin.com" class="form-control" placeholder="Email" />
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group has-feedback">
                 <label asp-for="Password"></label>
-                <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
+                <input asp-for="Password" type="password" value="123456" class="form-control" placeholder="Password" />
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
