--- a/netcore/Views/Account/ResetPassword.cshtml
+++ b/netcore/Views/Account/ResetPassword.cshtml
@@ -8,7 +8,7 @@
     
     <div class="register-box-body">
         <div class="register-logo">
-            <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>IN</b>VENTORY</a>
+            <a href="@netcore.MVC.Pages.HomeIndex.Url"><b>CRM+</b>INVENTORY</a>
         </div>
         <p class="login-box-msg">Register a new membership</p>
         <form method="post">
