--- a/netcore/Views/Shared/_AdminlteNetcoreMainHeader.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainHeader.cshtml
@@ -4,9 +4,9 @@
     <!-- Logo -->
     <a href="@netcore.MVC.Pages.HomeIndex.Url" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini"><b>I</b>NV</span>
+        <span class="logo-mini"><b>CRM</b></span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><b>IN</b>VENTORY</span>
+        <span class="logo-lg"><b>CRM+</b>INV</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
